--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "acorn": "^6.4.1",
         "bootstrap": "^4.4.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
